--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ mcp>=1.0.0
 pydantic>=2.0
 aiosqlite>=0.20.0
 
-# Skill-specific
+# Skill-specific dependencies
+-r skills/email/requirements.txt
+-r skills/github/requirements.txt
+-r skills/notion/requirements.txt
+-r skills/otter/requirements.txt
 -r skills/telegram/requirements.txt
