Refactor JSON formatting and clean up whitespace in CCXT and Wallet skills
This commit streamlines the formatting of JSON files in the CCXT and Wallet skills by consolidating dependency lists into single lines for improved readability. Additionally, unnecessary whitespace has been removed from several Python files, enhancing code cleanliness and consistency. These changes contribute to better maintainability and a more polished codebase.

--- a/skills/wallet/manifest.json
+++ b/skills/wallet/manifest.json
@@ -27,10 +27,27 @@
         "label": "Wallet Account",
         "description": "A blockchain wallet account derived from a seed phrase.",
         "properties": [
-          { "name": "index", "type": "number", "description": "Derivation index (0-4)" },
-          { "name": "chain_type", "type": "string", "description": "Chain type: 'evm' or 'sol'" },
-          { "name": "address", "type": "string", "description": "Wallet address" },
-          { "name": "label", "type": "string", "description": "User-assigned label", "optional": true }
+          {
+            "name": "index",
+            "type": "number",
+            "description": "Derivation index (0-4)"
+          },
+          {
+            "name": "chain_type",
+            "type": "string",
+            "description": "Chain type: 'evm' or 'sol'"
+          },
+          {
+            "name": "address",
+            "type": "string",
+            "description": "Wallet address"
+          },
+          {
+            "name": "label",
+            "type": "string",
+            "description": "User-assigned label",
+            "optional": true
+          }
         ]
       },
       {
@@ -38,10 +55,22 @@
         "label": "Blockchain Network",
         "description": "A blockchain network configuration.",
         "properties": [
-          { "name": "chain_id", "type": "string", "description": "Chain identifier" },
+          {
+            "name": "chain_id",
+            "type": "string",
+            "description": "Chain identifier"
+          },
           { "name": "name", "type": "string", "description": "Network name" },
-          { "name": "rpc_url", "type": "string", "description": "RPC endpoint URL" },
-          { "name": "chain_type", "type": "string", "description": "Chain type: 'evm' or 'sol'" }
+          {
+            "name": "rpc_url",
+            "type": "string",
+            "description": "RPC endpoint URL"
+          },
+          {
+            "name": "chain_type",
+            "type": "string",
+            "description": "Chain type: 'evm' or 'sol'"
+          }
         ]
       }
     ],
