--- a/skills/ccxt/manifest.json
+++ b/skills/ccxt/manifest.json
@@ -7,11 +7,7 @@
   "entry": "__main__.py",
   "tick_interval": 300000,
   "env": [],
-  "dependencies": [
-    "ccxt>=4.0.0",
-    "mcp>=1.0.0",
-    "pydantic>=2.0"
-  ],
+  "dependencies": ["ccxt>=4.0.0", "mcp>=1.0.0", "pydantic>=2.0"],
   "setup": {
     "required": true,
     "label": "Connect Exchanges"
