Add skillcoder meta-skill for dynamic skill generation
This commit introduces the skillcoder meta-skill, which automates the creation, validation, and testing of new AlphaHuman skills. Key changes include:
- Added core files: `__init__.py`, `__main__.py`, and `manifest.json` to define the skill's structure and dependencies.
- Implemented a code generation engine in `templates.py` to facilitate the creation of skill files based on tool specifications.
- Introduced filtering and validation functions to enhance the skill generation process.

These additions significantly expand the capabilities of the skill framework, enabling users to create new skills efficiently and effectively.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,9 @@ warn_unreachable = true
 strict_equality = true
 show_error_codes = true
 pretty = true
+exclude = [
+    ".*skill-coder.*",
+]
 
 [[tool.mypy.overrides]]
 module = [
