--- a/skills/desktop/manifest.json
+++ b/skills/desktop/manifest.json
@@ -7,7 +7,12 @@
   "entry": "__main__.py",
   "tick_interval": null,
   "env": [],
-  "dependencies": ["pynput>=1.7.6", "Pillow>=10.0.0", "mcp>=1.0.0", "pydantic>=2.0"],
+  "dependencies": [
+    "pynput>=1.7.6",
+    "Pillow>=10.0.0",
+    "mcp>=1.0.0",
+    "pydantic>=2.0"
+  ],
   "setup": {
     "required": false,
     "label": "Configure Desktop Automation"
