Add Gmail skill with comprehensive authentication and email management
- Implement OAuth2 authentication flow with token refresh
- Add 7 Gmail tools: get-emails, send-email, get-email, get-labels, search-emails, mark-email, get-profile
- Create SQLite database schema for emails, threads, labels, and attachments
- Add comprehensive unit tests with V8 test harness
- Follow established patterns for skill state management via globalThis
- Support email entities with threading, labeling, and attachment handling
- Add V8 runtime compatibility fixes for URLSearchParams and Buffer usage
- Expand TypeScript global definitions for missing browser APIs
- Configure esbuild to suppress intentional CommonJS-in-ESM warnings

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ package-lock.json
 .env.test.local
 .env.production.local
 
+.idea
+
 # Python
 __pycache__/
 *.py[cod]
@@ -31,7 +33,6 @@ dmypy.json
 # Compiled JavaScript from TypeScript skills
 skills
 skills-ts-out
-examples/**/*.js
 src/**/*.js
 
 # Compiled JavaScript from test harness
