Add local model support for inference and testing
- Updated `.gitignore` to exclude local model files.
- Enhanced `CLAUDE.md` with instructions for downloading and testing the local model.
- Introduced model API in the test harness, allowing for local LLM inference with methods for checking availability, generating text, and summarizing.
- Added scripts for downloading the model and running tests with the real model backend.
- Updated TypeScript definitions to include model-related interfaces and methods, improving type safety and clarity.
- Refactored test harness to integrate the new model functionality, ensuring seamless testing and usage.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ src/**/*.js
 
 # Compiled JavaScript from test harness
 dev/js-harness/**/*.js
+
+# Local model files (large GGUF binaries)
+.models/
