--- a/src/notion/manifest.json
+++ b/src/notion/manifest.json
@@ -7,7 +7,15 @@
   "description": "Notion workspace integration — 22 tools for pages, databases, blocks, users, comments, and search.",
   "auto_start": false,
   "platforms": ["windows", "macos", "linux", "android", "ios"],
-  "setup": { "required": true, "label": "Connect Notion" },
+  "setup": {
+    "required": true,
+    "label": "Connect Notion",
+    "oauth": {
+      "provider": "notion",
+      "scopes": [],
+      "apiBaseUrl": "https://api.notion.com/v1"
+    }
+  },
   "entity_schema": {
     "entity_types": [
       {
