--- a/src/gmail/manifest.json
+++ b/src/gmail/manifest.json
@@ -30,13 +30,38 @@
         "properties": [
           { "name": "subject", "type": "string", "description": "Email subject line" },
           { "name": "sender_email", "type": "string", "description": "Sender's email address" },
-          { "name": "sender_name", "type": "string", "description": "Sender's display name", "optional": true },
-          { "name": "recipient_email", "type": "string", "description": "Primary recipient's email address" },
-          { "name": "date", "type": "string", "description": "ISO 8601 timestamp when email was sent" },
+          {
+            "name": "sender_name",
+            "type": "string",
+            "description": "Sender's display name",
+            "optional": true
+          },
+          {
+            "name": "recipient_email",
+            "type": "string",
+            "description": "Primary recipient's email address"
+          },
+          {
+            "name": "date",
+            "type": "string",
+            "description": "ISO 8601 timestamp when email was sent"
+          },
           { "name": "snippet", "type": "string", "description": "Brief preview of email content" },
-          { "name": "is_read", "type": "boolean", "description": "Whether the email has been read" },
-          { "name": "is_important", "type": "boolean", "description": "Whether the email is marked as important" },
-          { "name": "has_attachments", "type": "boolean", "description": "Whether the email has attachments" }
+          {
+            "name": "is_read",
+            "type": "boolean",
+            "description": "Whether the email has been read"
+          },
+          {
+            "name": "is_important",
+            "type": "boolean",
+            "description": "Whether the email is marked as important"
+          },
+          {
+            "name": "has_attachments",
+            "type": "boolean",
+            "description": "Whether the email has attachments"
+          }
         ]
       },
       {
@@ -45,11 +70,31 @@
         "description": "A conversation thread in Gmail.",
         "properties": [
           { "name": "subject", "type": "string", "description": "Thread subject line" },
-          { "name": "message_count", "type": "number", "description": "Number of messages in thread" },
-          { "name": "participants", "type": "string", "description": "Comma-separated list of participant emails" },
-          { "name": "last_message_date", "type": "string", "description": "ISO 8601 timestamp of last message" },
-          { "name": "is_read", "type": "boolean", "description": "Whether all messages in thread are read" },
-          { "name": "has_attachments", "type": "boolean", "description": "Whether any message has attachments" }
+          {
+            "name": "message_count",
+            "type": "number",
+            "description": "Number of messages in thread"
+          },
+          {
+            "name": "participants",
+            "type": "string",
+            "description": "Comma-separated list of participant emails"
+          },
+          {
+            "name": "last_message_date",
+            "type": "string",
+            "description": "ISO 8601 timestamp of last message"
+          },
+          {
+            "name": "is_read",
+            "type": "boolean",
+            "description": "Whether all messages in thread are read"
+          },
+          {
+            "name": "has_attachments",
+            "type": "boolean",
+            "description": "Whether any message has attachments"
+          }
         ]
       },
       {
@@ -59,8 +104,16 @@
         "properties": [
           { "name": "name", "type": "string", "description": "Label name" },
           { "name": "type", "type": "string", "description": "Label type: system or user" },
-          { "name": "message_count", "type": "number", "description": "Number of messages with this label" },
-          { "name": "unread_count", "type": "number", "description": "Number of unread messages with this label" },
+          {
+            "name": "message_count",
+            "type": "number",
+            "description": "Number of messages with this label"
+          },
+          {
+            "name": "unread_count",
+            "type": "number",
+            "description": "Number of unread messages with this label"
+          },
           { "name": "color", "type": "string", "description": "Label color", "optional": true }
         ]
       }
