--- a/src/notion/manifest.json
+++ b/src/notion/manifest.json
@@ -10,11 +10,7 @@
   "setup": {
     "required": true,
     "label": "Connect Notion",
-    "oauth": {
-      "provider": "notion",
-      "scopes": [],
-      "apiBaseUrl": "https://api.notion.com/v1"
-    }
+    "oauth": { "provider": "notion", "scopes": [], "apiBaseUrl": "https://api.notion.com/v1" }
   },
   "entity_schema": {
     "entity_types": [
