Refactor TypeScript code for improved readability and consistency
- Reformatted TypeScript files to enhance code clarity by aligning object properties and function parameters.
- Simplified variable declarations and removed unnecessary line breaks in various files, including `index.ts`, `skill-state.ts`, and `types.ts`.
- Updated test files to maintain consistent formatting and improve readability in assertions and function calls.
- Ensured consistent structure in the `manifest.json` and tool files for better maintainability.

--- a/src/wallet/manifest.json
+++ b/src/wallet/manifest.json
@@ -6,8 +6,5 @@
   "version": "1.0.0",
   "description": "Web3 wallet connector — manage EVM and Solana wallets using addresses from the app. Check balances, list wallets and networks. Wallet address is derived from your mnemonic in the frontend.",
   "auto_start": false,
-  "setup": {
-    "required": true,
-    "label": "Connect Wallet"
-  }
+  "setup": { "required": true, "label": "Connect Wallet" }
 }
