--- a/src/wallet/manifest.json
+++ b/src/wallet/manifest.json
@@ -4,7 +4,7 @@
   "runtime": "quickjs",
   "entry": "index.js",
   "version": "1.0.0",
-  "description": "Web3 wallet connector — manage EVM and Solana wallets using addresses from the app. Check balances, list wallets and networks. Wallet address is derived from your mnemonic in the frontend.",
+  "description": "Web3 wallet connector — manage EVM wallets using addresses from the app. Check balances, list wallets and networks. Wallet address is derived from your mnemonic in the frontend.",
   "auto_start": false,
   "setup": { "required": true, "label": "Connect Wallet" }
 }
