--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
     "skipLibCheck": true,
     "moduleResolution": "node"
   },
-  "include": ["types/**/*.d.ts", "src/types.d.ts", "src/*/index.ts", "examples/*/index.ts", "src/**/*.ts"],
+  "include": [
+    "types/**/*.d.ts",
+    "src/types.d.ts",
+    "src/*/index.ts",
+    "examples/*/index.ts",
+    "src/**/*.ts"
+  ],
   "exclude": ["node_modules", ".venv", "dev"]
 }
